--- a/Backend/Dockerfile.actions
+++ b/Backend/Dockerfile.actions
@@ -1,20 +1,24 @@
+# Backend/Dockerfile.actions
+
 FROM python:3.9-slim-bullseye
 
+# Install dependencies
+RUN apt-get update && apt-get install -y \
+    gcc \
+    build-essential \
+    libpq-dev \
+    curl \
+    && apt-get clean
+
+# Set working dir
 WORKDIR /app
 
-# Install system tools
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends \
-    build-essential curl && \
-    apt-get clean && rm -rf /var/lib/apt/lists/*
+# Copy project files
+COPY . /app
 
-# Install dependencies
-COPY requirements.txt .
+# Install Python deps
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy your action server files
-COPY . .
-
-# Run the Rasa action server
-CMD ["rasa", "run", "actions", "--port", "5055"]
+# Start the action server
+CMD ["rasa", "run", "actions"]
